--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,4 @@ server:
 
 user:
   file:
-    path: C:\Users\User\Desktop\gym\src\main\resources\users.json
+    path: C:\Users\User\Desktop\desktop\gym\src\main\resources\users.json
